Añadir dominio IP de Portaldaspalabras.gal

--- a/intro.html
+++ b/intro.html
@@ -3,6 +3,7 @@
 	<title>Introducción</title>
 	</head>
 	<body>
-		
+		<p>Web: portaldaspalabras.gal</p>
+		<p>IP: 10.42.68.254</p>
 	</body>
 </html>
